[package]
name = "hello_world_in_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
gloo = "0.8.0"
serde = "1.0.163"
serde_json = "1.0.96"
stylist = {version = "0.12.0", features = ["yew"]}
